--- a/src/app/main/components/header/header.component.scss
+++ b/src/app/main/components/header/header.component.scss
@@ -14,9 +14,10 @@ $lightdark: #1C1C24;
     margin: 0 20px;
 }
 .logo {
+    margin-top: 10px;
     width: 350px;
     height: 70px;
-    background-image: url(../../../../assets/img/logo.png);
+    background-image: url(../../../../assets/img/logoFTC.png);
     background-size: contain;
     background-repeat: no-repeat;
     background-position: center left;
